@@ -9,6 +9,7 @@ https://github.com/rcaelers/workrave/issues
 
 ** Follow OS dark/light mode on Windows (#529)
 ** Fix dark mode on Windows (#537)
+** Fix translations in the exercises (#574)
 ** Fix issues where menu items could not be selected on Windows
 ** Beta channel now also receives release candidates and final releases
 
